--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,16 @@
     <title> NETFLIX CLONE</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <h2 class="logo"> NETFLIX</h2>
+            <nav>
+                <a href="a">Inicio</a>
+                <a href="a">Séries</a>
+                <a href="a">Filmes</a>
+                <a href="a">Documentários</a>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
