Container e Imagem Principal

--- a/Index.html
+++ b/Index.html
@@ -19,5 +19,19 @@
             </nav>
         </div>
     </header>
+
+    <main>
+        <div class="filme-principal">
+
+            <div class="container">
+
+                <h3 class="titulo">Capitã Marvel (2019)</h3>
+
+                <p class="descricao">Capitã Marvel, parte do exército de elite dos Kree, uma raça alienígena, encontra-se no meio de uma batalha entre seu povo e os Skrulls. Ao tentar impedir uma invasão de larga escala na Terra, em 1995, ela tem memórias recorrentes de uma outra vida, como Carol Danvers, agente da Força Aérea norte-americana. Com a ajuda de Nick Fury, Capitã Marvel precisa descobrir os segredos de seu passado e pôr um fim ao conflito intergalático com os Skrulls.</p>
+                
+                
+            </div>
+        </div>
+    </main>
 </body>
 </html>
