alteração de links

--- a/Index.html
+++ b/Index.html
@@ -38,14 +38,14 @@
                 
                 <div class="botoes">
 
-                    <a target="_blank" href="traillers.html">
+                    <a target="_blank" href="https://www.youtube.com/watch?v=FV7AxLbHcrE">
                         <button role="button" class="botao">
                             <i class="fas fa-play"></i>
                             ASSISTIR AGORA
                         </button>
                     </a>
 
-                    <a target="_blank" href="info.html">
+                    <a target="_blank" href="https://pt.wikipedia.org/wiki/Captain_Marvel_(filme)">
                         <button role="button" class="botao">
                             <i class="fas fa-info-circle"></i>
                             MAIS INFORMAÇÕES
