Acesso aos Links menu

--- a/Index.html
+++ b/Index.html
@@ -19,10 +19,10 @@
         <div class="container">
             <h2 class="logo"> NETFLIX</h2>
             <nav>
-                <a href="a">Inicio</a>
-                <a href="a">Séries</a>
-                <a href="a">Filmes</a>
-                <a href="a">Documentários</a>
+                <a href="Index.html">Inicio</a>
+                <a target="_blank" href="https://www.netflix.com/br/browse/genre/83">Séries</a>
+                <a target="_blank"href="https://www.netflix.com/br/browse/genre/34399">Filmes</a>
+                <a target="_blank"href="https://www.netflix.com/br/browse/genre/6839">Documentários</a>
             </nav>
         </div>
     </header>
